load("//bazel:api.bzl", "modular_py_binary", "modular_run_binary_test")

package(default_visibility = ["//visibility:private"])

modular_py_binary(
    name = "main",
    srcs = [
        "main.py",
        "mlp.py",
    ],
    imports = ["."],
    mojo_deps = ["//max:MOGGKernelAPI"],
    deps = [
        "//max/python/max/dtype",
        "//max/python/max/graph",
        "//max/python/max/nn",
    ],
)

modular_run_binary_test(
    name = "main_test",
    binary = "main",
)
