load("//bazel:api.bzl", "modular_py_binary", "modular_run_binary_test", "requirement")

package(default_visibility = ["//visibility:private"])

modular_py_binary(
    name = "addition",
    srcs = ["addition.py"],
    imports = ["."],
    mojo_deps = ["//max:MOGGKernelAPI"],
    deps = [
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        requirement("numpy"),
    ],
)

modular_run_binary_test(
    name = "addition_test",
    binary = "addition",
)
