load("//bazel:api.bzl", "modular_py_binary", "modular_run_binary_test")

package(default_visibility = ["//visibility:private"])

modular_py_binary(
    name = "basic",
    srcs = ["basic.py"],
    imports = ["."],
    mojo_deps = ["//max:MOGGKernelAPI"],
    deps = [
        "//max/python/max/entrypoints",
        "//max/python/max/pipelines",
    ],
)

modular_run_binary_test(
    name = "basic_test",
    timeout = "long",
    binary = "basic",
    tags = [
        "requires-network",
    ],
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//:asan": ["@platforms//:incompatible"],  # Times out under ASAN
        "//conditions:default": [],
    }),  # FIXME long running on MacOS. MOCO-2412
)
