load("//bazel:api.bzl", "mojo_library", "requirement")
load(":custom_op_example.bzl", "custom_op_example_py_binary")

package(default_visibility = ["//visibility:private"])

filegroup(
    name = "kernel_sources",
    srcs = glob(["operations/*.mojo"]),
)

custom_op_example_py_binary(
    name = "addition",
    srcs = ["addition.py"],
    extra_data = [
        ":operations",
    ],
    deps = [
        "//max/python/max/torch",
        requirement("torch"),
    ],
)

custom_op_example_py_binary(
    name = "grayscale",
    srcs = ["grayscale.py"],
    extra_data = [
        ":operations",
    ],
    # TODO(GEX-3151): Investigate and enable on macOS
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "//max/python/max/torch",
        requirement("numpy"),
        requirement("torch"),
        requirement("pillow"),
    ],
)

custom_op_example_py_binary(
    name = "whisper",
    srcs = ["whisper.py"],
    create_test = False,
    extra_data = [
        ":operations",
    ],
    deps = [
        "//max/python/max/torch",
        requirement("torch"),
        requirement("transformers"),
        requirement("datasets"),
    ],
)

custom_op_example_py_binary(
    name = "graph",
    srcs = ["graph.py"],
    # TODO(GEX-3151): Investigate and enable on macOS
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "//max/python/max/graph",
        "//max/python/max/torch",
        requirement("torch"),
    ],
)

mojo_library(
    name = "operations",
    srcs = [":kernel_sources"],
    validate_missing_docs = False,
    deps = [
        "//max:compiler",
        "//max:layout",
        "//max:tensor",
        "@mojo//:std",
    ],
)
